--- a/app/src/main/res/layout/activity_atur_terima_part.xml
+++ b/app/src/main/res/layout/activity_atur_terima_part.xml
@@ -2,14 +2,11 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -34,189 +31,244 @@
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="20dp"
+            android:id="@+id/layout_terimapart"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:background="@drawable/border_solid"
-            android:padding="10sp"
-            tools:context=".modules.terima_part.AturTerimaPart">
+            android:padding="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
 
             <LinearLayout
-                android:layout_width="170sp"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="5dp">
 
                 <TextView
-                    android:id="@+id/textView28"
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:text="TIPE SUPPLIER"
-                    android:layout_margin="5dp"/>
-
-                <TextView
-                    android:id="@+id/textView30"
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:text="NAMA SUPPLIER"
-                    android:layout_margin="5dp"/>
-
-                <TextView
-                    android:id="@+id/textView31"
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:text="No. DO"
-                    android:layout_margin="5dp"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                    android:id="@+id/textView46"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_weight="1"
+                    android:text="Tipe Supplier" />
 
-                    <TextView
-                        android:id="@+id/tglPesan"
-                        android:layout_width="110sp"
-                        android:layout_height="50sp"
-                        android:layout_weight="1"
-                        android:text="TANGGAL PESAN"
-                        android:layout_margin="5dp"/>
-
-                    <ImageView
-                        android:id="@+id/img_calender1"
-                        android:layout_width="30sp"
-                        android:layout_height="30sp"
-                        android:layout_weight="1"
-                        android:layout_margin="5dp"
-                        app:srcCompat="@drawable/ic_calender" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/textView25"
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:text="PEMBAYARAN"
-                    android:layout_margin="5dp"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <Spinner
+                    android:id="@+id/spinnerSupplier"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/tglJatuhTempo"
-                        android:layout_width="120sp"
-                        android:layout_height="50sp"
-                        android:layout_margin="5dp"
-                        android:text="JATUH TEMPO INV." />
-
-                    <ImageView
-                        android:id="@+id/img_calender3"
-                        android:layout_width="30sp"
-                        android:layout_height="30sp"
-                        android:layout_margin="5dp"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/ic_calender" />
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/textView32"
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:text="ONGKOS KIRIM"
-                    android:layout_margin="5dp"/>
+                    android:layout_weight="1"
+                    android:entries="@array/tipe_supplier" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="200sp"
+                android:id="@+id/layout_nama_supplier"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="5dp">
 
-                <Spinner
-                    android:id="@+id/spinnerSupplier"
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:layout_margin="5dp"
-                    android:entries="@array/tipe_supplier"/>
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
 
                 <EditText
                     android:id="@+id/txtNamaSupplier"
                     android:layout_width="match_parent"
                     android:layout_height="50sp"
                     android:ems="10"
+                    android:hint="Nama Supplier"
                     android:inputType="textPersonName"
-                    android:layout_margin="5dp"/>
+                    android:text="" />
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="5dp">
+
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
 
                 <EditText
-                    android:id="@+id/txtNodo"
+                    android:id="@+id/txtNoDo"
                     android:layout_width="match_parent"
                     android:layout_height="50sp"
-                    android:layout_margin="5dp"
                     android:ems="10"
-                    android:inputType="number" />
+                    android:hint="NO. DO"
+                    android:inputType="textPersonName"
+                    android:number="Number" />
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/tglTerima"
-                        android:layout_width="100sp"
+                        android:id="@+id/textView43"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Tanggal Pesan"
+                        android:layout_weight="1"/>
+
+                    <TextView
+                        android:id="@+id/tglPesan"
+                        android:layout_width="40sp"
                         android:layout_height="50sp"
                         android:layout_weight="1"
-                        android:text="TANGGAL TERIMA"
-                        android:layout_margin="5dp"/>
+                        android:drawableLeft="@drawable/ic_date" />
 
-                    <ImageView
-                        android:id="@+id/img_calender2"
-                        android:layout_width="30sp"
-                        android:layout_height="30sp"
-                        android:layout_weight="1"
-                        android:layout_margin="5dp"
-                        app:srcCompat="@drawable/ic_calender" />
 
                 </LinearLayout>
+            </LinearLayout>
 
-                <Spinner
-                    android:id="@+id/spinnerPembayaran"
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:layout_margin="5dp"
-                    android:entries="@array/pembayaran" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:orientation="horizontal"
-                    android:layout_margin="5dp">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView42"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Tanggal Terima"
+                        android:layout_weight="1"/>
+
+                    <TextView
+                        android:id="@+id/tglTerima"
+                        android:layout_width="40sp"
+                        android:layout_height="40sp"
+                        android:drawableLeft="@drawable/ic_date"
+                        android:layout_weight="1"/>
 
                 </LinearLayout>
-
-                <EditText
-                    android:id="@+id/txtOngkosKirim"
-                    android:layout_width="match_parent"
-                    android:layout_height="50sp"
-                    android:layout_margin="5dp"
-                    android:ems="10"
-                    android:inputType="number" />
-
             </LinearLayout>
-        </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="5dp">
+
+                <LinearLayout
+                    android:id="@+id/layout_pembayaran"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView41"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Pembayaran"
+                        android:layout_weight="1"/>
+
+                    <Spinner
+                        android:id="@+id/spinnerPembayaran"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:entries="@array/pembayaran"
+                        android:layout_weight="1" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="5dp">
+
+                <LinearLayout
+                    android:id="@+id/layout_jatuh_tempo"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView40"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Jatuh Tempo"
+                        android:layout_weight="1"/>
+
+                    <TextView
+                        android:id="@+id/jatuhTempo"
+                        android:layout_width="40sp"
+                        android:layout_height="40sp"
+                        android:layout_weight="1"
+                        android:drawableLeft="@drawable/ic_date" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_ongkir"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="5dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <android.support.design.widget.TextInputLayout
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
+                    <EditText
+                        android:id="@+id/txtOngkosKirim"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:hint="Ongkos Kirim"
+                        android:inputType="textPersonName"
+                        android:number="Number" />
+                    </android.support.design.widget.TextInputLayout>
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/btnSelanjutnya"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_rounded_accent"
+                android:gravity="center"
+                android:layout_gravity="end"
+                android:text="Selanjutnya"
+                android:textColor="@color/white_transparency"/>
+        </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
-    <Button
-        android:id="@+id/btnSelanjutnya"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="450sp"
-        android:background="@drawable/btn_rounded_accent"
-        android:text="Selanjutnya" />
+
+
 
 
 </android.support.design.widget.CoordinatorLayout>
