--- a/app/src/main/res/layout/activity_main_home.xml
+++ b/app/src/main/res/layout/activity_main_home.xml
@@ -29,8 +29,7 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/imageView"
@@ -44,8 +43,8 @@
             <android.support.v4.view.ViewPager
                 android:id="@+id/pageframe"
                 android:layout_width="match_parent"
-                android:layout_height="180dp"></android.support.v4.view.ViewPager>
-
+                android:layout_height="180dp">
+            </android.support.v4.view.ViewPager>
             <FrameLayout
                 android:id="@+id/indicator"
                 android:layout_width="wrap_content"
@@ -54,35 +53,17 @@
                 android:layout_marginBottom="5dp"
                 android:padding="10dp"></FrameLayout>
         </FrameLayout>
-        <FrameLayout
-            android:background="@color/blue_bg"
+
+        <GridView
+            android:id="@+id/gridView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="128dp"
-                android:layout_gravity="top|center_horizontal"
-                android:src="@drawable/menuup"></ImageView>
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="142dp"
-                android:layout_gravity="top|center_horizontal"
-                android:src="@drawable/menutop"></ImageView>
-
-            <GridView
-                android:id="@+id/gridView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-                android:gravity="center"
-                android:horizontalSpacing="3dp"
-                android:numColumns="2"
-                android:stretchMode="columnWidth"
-                android:verticalSpacing="3dp"
-                tools:listitem="@layout/activity_main_item" />
-        </FrameLayout>
-
+            android:layout_height="wrap_content"
+            android:columnWidth="100dp"
+            android:gravity="center"
+            android:horizontalSpacing="3dp"
+            android:numColumns="4"
+            android:stretchMode="columnWidth"
+            android:verticalSpacing="3dp" />
     </LinearLayout>
 
 
