--- a/app/src/main/res/layout/activity_main_home_item.xml
+++ b/app/src/main/res/layout/activity_main_home_item.xml
@@ -8,30 +8,13 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <android.support.v7.widget.CardView
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:layout_width="128dp"
-            android:layout_height="128dp"
-            android:layout_margin="10dp"
-            android:elevation="10dp"
-            app:cardBackgroundColor="@color/colorPrimary"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="6dp">
 
-            <android.support.v7.widget.CardView
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:layout_width="126dp"
-            android:layout_height="126dp"
-            android:layout_margin="10dp"
-            android:elevation="10dp"
-            app:cardBackgroundColor="@android:color/white"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="6dp">
         <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
             android:layout_gravity="center_vertical|center_horizontal"
             android:padding="4dp">
+
 
 
             <TextView
@@ -46,17 +29,16 @@
                 android:textStyle="bold" />
 
             <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal">
-
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
                 <ImageView
                     android:id="@+id/imgIcon"
-                    android:layout_width="86dp"
-                    android:layout_height="86dp"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_margin="8dp"
-                    app:srcCompat="@drawable/mn_perawatan" />
+                    app:srcCompat="@mipmap/ic_launcher_round" />
 
                 <include
                     layout="@layout/bagde"
@@ -66,8 +48,6 @@
             </FrameLayout>
 
         </FrameLayout>
-        </android.support.v7.widget.CardView>
-        </android.support.v7.widget.CardView>
     </FrameLayout>
 
 </FrameLayout>
